--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <!-- Todo: NimbusbyFreeman -->
+    <title>Robert Freeman | Student | Junior CLoud Architect </title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Robert Freeman | Junior Cloud Architect" />
 
     <link
       rel="stylesheet"
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Robert Freeman</span>
           <br />
-          I'm the Unknown Developer.
+          I'm an aspiring Cloud Architect.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
